
- IMPROVE: let IvyDE refresh workspace after a resolve (IVYDE-27) (thanks to Clint Burghduff)
- IMPROVE: IvyDE now resolve by batch, then preventing too many workspace build (IVYDE-177)
- IMPROVE: Shared Javadoc/Source attachments (IVYDE-230) (thanks to Gregory Fernandez)
- IMPROVE: WorkspaceResolver: deal with self-dependencies (IVYDE-240)

- FIX: Variable based path for ivysettings doesn't work it there are some spaces in the path (IVYDE-253)
- FIX: Triggers are not called (IVYDE-244)
- FIX: Missing ivysettings.xml can make the classpath container config to change (IVYDE-248)

  version 2.1.0
==========================
- NEW: Inclusion of Ivy related schemas into the Eclipse XML Catalog (IVYDE-190) (thanks to Miguel Griffa)
- NEW: Add "Resolve Dependencies" extension to Java Project in the Package Explorer (IVYDE-153) (thanks to Jon Schneider and Troy Gaines)
- NEW: Add option to not launch a resolve after saving a file with the IvyEditor (IVYDE-197) (thanks to Jon Schneider)
- NEW: File resource listener on Ivy files launches resolve when it detects modifications (IVYDE-199) (thanks to Jon Schneider)
- NEW: Add an option in the container to automatically laucnh a resolve before each launch (IVYDE-204)
- NEW: "Reverse Dependency Explorer" View for synchronizing revisions across multiple projects in a workspace (IVYDE-195) (thanks to Jon Schneider)
- NEW: Make the Ivy console filter on the logging level (IVYDE-205)
- NEW: Support for Eclipse variables (IVYDE-152)

- IMPROVE: Wrap cache cleaning in a job so that it does not block the workspace (IVYDE-207) (thanks to Jon Schneider)
- IMPROVE: Allow workspace resolver to skip version matcher (IVYDE-187) (thanks to Phillip Webb)
- IMPROVE: Filter closed projects from workspace selection dialog (IVYDE-249) (thanks to Sebastien Moran)

- FIX: "Ivy Settings Path" Browse button results in an incorrectly formatted URL (IVYDE-191) (thanks to Jon Schneider)