@@ -12,6 +12,7 @@
 - IMPROVE: IvyDE now resolve by batch, then preventing too many workspace build (IVYDE-177)
 - IMPROVE: Shared Javadoc/Source attachments (IVYDE-230) (thanks to Gregory Fernandez)
 - IMPROVE: WorkspaceResolver: deal with self-dependencies (IVYDE-240)
+- IMPROVE: Impossible to resolve dependencies: missing diagnostics (IVYDE-233)
 
 - FIX: Variable based path for ivysettings doesn't work it there are some spaces in the path (IVYDE-253)
 - FIX: Triggers are not called (IVYDE-244)
